--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -6,11 +6,16 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 <f:view>
-    <h:outputLabel id="billboard" value="Hello, world"/>
+    <h:head>
+        <title>SBB Bill board</title>
+    </h:head>
+    <h:body>
+        <h:dataTable border="1">
+            <tbody></tbody>
+        </h:dataTable>
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+                type="text/javascript"></script>
+        <script language="javascript" type="text/javascript" src="updscript.js"></script>
+    </h:body>
 </f:view>
-<h:dataTable border="1">
-    <tbody></tbody>
-</h:dataTable>
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        type="text/javascript"></script>
-<script language="javascript" type="text/javascript" src="updscript.js"></script></html>
+</html>
